ConnexoProject/force-app/main/default/objects/Linked_Change_Control__c/Linked_Change_Control__c.object-meta.xml
<CustomObject>
    <label>Linked Change Control</label>
    <nameField>
        <displayFormat>LinkedCC-{0000}</displayFormat>
        <label>Linked Change Control Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Linked Change Controls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>