ConnexoProject/force-app/main/default/objects/Linked_Change_Control__c/fields/Change_Control__c.field-meta.xml
<CustomField>
    <fullName>Change_Control__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Change Control</label>
    <referenceTo>CMPL123QMS__Change_Control__c</referenceTo>
    <relationshipLabel>Linked Change Controls</relationshipLabel>
    <relationshipName>Linked_Change_Controls</relationshipName>
    <type>Lookup</type>
</CustomField>