ConnexoProject/force-app/main/default/objects/Linked_Change_Control__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>CMPL123__Product__c</referenceTo>
    <relationshipLabel>Linked Change Controls</relationshipLabel>
    <relationshipName>Linked_Change_Controls</relationshipName>
    <type>Lookup</type>
</CustomField>